<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameProductTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_product"
            android:layout_marginTop="@dimen/core_theme_medium_space"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/descriptionProductTextInput"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameProductEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionProductTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description_product"
            android:layout_marginTop="@dimen/core_theme_medium_space"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameProductTextInput"
            app:layout_constraintBottom_toTopOf="@id/priceProductTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionProductEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="text"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceProductTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price_product"
            android:layout_marginTop="@dimen/core_theme_medium_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionProductTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceProductEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="number"
                android:imeOptions="actionNext" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createProductButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceProductTextInput"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/add_product"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceProductTextInput" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>