<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.details.ProductDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/core_theme_medium_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/productIdTextView"
                style="@style/ListItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/core_theme_medium_width"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/article_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productIdValueTextView"
                style="@style/ListItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/core_theme_medium_space"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/productIdTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="№1" />

            <TextView
                android:id="@+id/titleTextView"
                style="@style/ListItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/core_theme_medium_width"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:layout_weight="1"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productIdTextView" />

            <TextView
                android:id="@+id/titleValueTextView"
                style="@style/ListItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:layout_marginStart="@dimen/core_theme_medium_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/productIdValueTextView"
                tools:text="Молоток" />

            <TextView
                android:id="@+id/descriptionTextView"
                style="@style/ListItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/core_theme_small_width"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <TextView
                android:id="@+id/descriptionValueTextView"
                style="@style/ListItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:layout_marginStart="@dimen/core_theme_medium_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/descriptionTextView"
                app:layout_constraintTop_toBottomOf="@+id/titleValueTextView"
                tools:text="Забивать гвозди" />


            <TextView
                android:id="@+id/priceTextView"
                style="@style/ListItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/core_theme_medium_width"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:layout_weight="1"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            <TextView
                android:id="@+id/priceValueTextView"
                style="@style/ListItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/core_theme_medium_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/priceTextView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionValueTextView"
                tools:text="20" />

            <TextView
                android:id="@+id/quantityTextView"
                style="@style/ListItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_marginStart="@dimen/core_theme_medium_width"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

            <TextView
                android:id="@+id/quantityValueTextView"
                style="@style/ListItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/core_theme_medium_space"
                android:layout_marginStart="@dimen/core_theme_medium_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/quantityTextView"
                app:layout_constraintTop_toBottomOf="@+id/priceValueTextView"
                tools:text="12" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/productDetailProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>